# smart-agri-cloud

./: .env.example  .gitignore  CODE_CHANGES_DETAILED.md  COMPLETION_SUMMARY.md  CSV_UPLOAD_FEATURE_DESIGN.md  DASHBOARD_CHANGES.md  DASHBOARD_SUMMARY.md  DASHBOARD_VISUAL_GUIDE.md  DEPLOYMENT.md  DEVELOPER.md  FILE_INDEX.md  GITHUB_SETUP.md  ML_TRAINING_GUIDE.md  Makefile  NEXT_FEATURES_DISCUSSION.md  POTENTIAL_ENHANCEMENTS.md  PROJECT_PROGRESS_AND_ROADMAP.md  QUICKREF.md  QUICK_REFERENCE.md  README.md  START_HERE.txt  VERIFICATION_REPORT.md  WHAT_CHANGED.md  docker-compose.yml  tabs_2_3_4_advanced.py  train-model.bat  train-model.ps1
db/: schema.sql
ml/: gen_dummy_model.py  train.py
services/api/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/api/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
services/dashboard/: Dockerfile  README.md  requirements.txt  streamlit_app.py  streamlit_app_backup.py  streamlit_app_enhanced.py
simulator/: simulator.py
