[tool.poetry]
name = "smart-agri-api"
version = "0.1.0"
description = "Smart Agri API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras=["standard"], version="^0.22.0"}
SQLAlchemy = "^2.0"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0.0"
joblib = "^1.2.0"
scikit-learn = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
